2011-10-08  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/gtk/widgets.jl: support 'choice widgets with numeric
	arguements.

2011-09-10  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/gtk/widgets.jl: added stepping property to 'number
	widgets.

2011-07-08  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/gtk/widgets/scheme-boolean.jl: scheme-boolean widget
	now really working as suppposed

2011-07-05  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/cfg/slot.jl: hide widgets which depend on an disabled
	value (rather than showing insensitive widgets)

2011-06-21  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/cfg/shell.jl: added button to install a theme (from
	tar-xz). Transform `sawfish-absent' into
	`sawfish-config-display-info', allowing to display any notice.

	* lisp/sawfish/wm/user.jl: close sawfish-config before restarting
	Sawfish and restart it after initialization. If not restarting, just
	close sawfish-config

	* src/main.c: add before-restart-hook

2011-06-20  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/cfg/shell.jl: don't load old sawfish.cfg.widgets
	widgets, even if they are installed

2011-06-19  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/cfg/widgets/*.jl
	* lisp/sawfish/gtk/widgets/: moved all widgets into sawfish.gtk. tree

2011-06-18  Christopher Roy Bratusek <nano@tuxfamily.org>
	* scripts/Makefile.in: install sawfish-about in $BINDIR

	* lisp/sawfish/wm/commands/help.jl: updated

	* lisp/sawfish/cfg/shell.jl: add buttons for accessing Wiki, Info,
	resource file and about-dialog to SawfishConfig. 

	* scripts/sawfish-about.jl: small update in about-dialog

	* lisp/sawfish/wm/ext/wallpaper.jl: fixed calling wallpaper-setter

	* lisp/sawfish/gtk/widgets/image.jl: fixed initializing the widget

2011-06-14  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfih/wm/ext/match-window.jl
	* themes/StyleTab/theme.jl