@@ -1,3 +1,6 @@
+2012-01-19  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/windows.jl: add window-class-name [Wang HongQin]
+
 2011-10-08  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/gtk/widgets.jl: support 'choice widgets with numeric
 	arguements.
